kubernetes/apps/networking/envoy-gateway/config/external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.kubernetes.io/target: &hostname external.${SECRET_DOMAIN}
    gatus.home-operations.com/endpoint: |-
      alerts:
        - type: gotify
      group: external
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.222.10
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production-tls"
    - name: http-short
      protocol: HTTP
      port: 80
      hostname: "*.${SECRET_DOMAIN_SHORT}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-short
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN_SHORT}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN_SHORT/./-}-production-tls"
    - name: http-pbfa
      protocol: HTTP
      port: 80
      hostname: "*.${SECRET_DOMAIN_PBFA}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-pbfa
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN_PBFA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN_PBFA/./-}-production-tls"
